# cs_data_structures_and_algorithms

graphs/: .gitignore
graphs/cs_ds_graphs/: CMakeLists.txt  Makefile  README.md  common.h  cs_ds_graphs.pro  gldrawingarea.cpp  gldrawingarea.h  graph_test.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
graphs/cs_ds_graphs/app/: LAppGraph.cpp  LAppGraph.h  LCommonPathFinding.h  LGraphWorld.h  LGraphWorldGeneral.h  LLandmarkPathFinder.h  LPathFinder.h  LPathFinderDijkstra.h  LPathFinderInterface.h
graphs/cs_ds_graphs/gl/: LApp.cpp  LApp.h
graphs/cs_ds_graphs/gl/core/: LScene.h
graphs/cs_ds_graphs/gl/core/base/: LGraphicsObject.h
graphs/cs_ds_graphs/gl/core/camera/: LBaseCamera2D.h
graphs/cs_ds_graphs/gl/core/primitives/: LPrimitive.h  LPrimitiveLine.h  LPrimitiveLineSwarm.h  LPrimitivePoint.h  LPrimitivePointSwarm.h  LPrimitivesRenderer2D.cpp  LPrimitivesRenderer2D.h
graphs/cs_ds_graphs/gl/core/shaders/: LShaderManager.cpp  LShaderManager.h
graphs/cs_ds_graphs/gl/core/shaders/primitives/: gl_primitive_circle_geometry_shader.glsl  gl_primitive_swarm_line_fragment_shader.glsl  gl_primitive_swarm_line_vertex_shader.glsl
graphs/cs_ds_graphs/gl/core/world/: LWorld2D.h
graphs/cs_ds_graphs/graph/: LEdge.h  LGraph.h  LNode.h
graphs/cs_ds_graphs/lib/: delaunay.c  delaunay.h
graphs/cs_ds_graphs/res/landmarks/: 1000000points_landmarks.data  10000points_landmarks.data  1000points_landmarks.data  100points_landmarks.data  2000points_landmarks.data  5000points_landmarks.data
graphs/cs_ds_graphs/res/preprocessing/: 10000points_preprocessing.data  1000points_preprocessing.data  100points_preprocessing.data  2000points_preprocessing.data  5000points_preprocessing.data
project/: .gitignore  README.md  app.cpp
project/cs_ds_project/: CMakeLists.txt  README.md  app.cpp  cs_ds_project  cs_ds_project.pro  main.cpp  test_cuda_cpp.cu
project/cs_ds_project/engine/: LCircle.h  LCommon.h  LConfiguration.cpp  LConfiguration.h  LSolver.cpp  LSolver.h
project/cs_ds_project/engine/gl/: LApp.cpp  LApp.h  LBaseCircle2D.h  LBaseObject2D.h  LCommonGL.h  LGraphicsObject.h  LScene.h  LShaderManager.h  LSimpleRenderer.h
project/cs_ds_project/engine/gl/shaders/: LBaseObject2D.h  gl_circle_geometry_shader.glsl  gp_base2d_fragment_shader.glsl  gp_base2d_vertex_shader.glsl  gp_circle_fragment_shader.glsl  gp_circle_vertex_shader.glsl
project/cs_ds_project/engine/matrix/: LMatrix.h
project/cs_ds_project/engine/qt/: lcirclerenderer.cpp  lcirclerenderer.h  lwindow.cpp  lwindow.h
project/cs_ds_project/itsvnd/diversification/: LBaseDiversifier.h  LRRdiversifier.h
project/cs_ds_project/itsvnd/intensification/: LBaseIntensifier.h  LTS_VNDintensifier.h  LTSintensifier.h  LVNDintensifier.cpp  LVNDintensifier.h  VND_search.h  cuda_vnd.cu  cuda_vnd.h
project/cs_ds_project/itsvnd/neighborhood/: Neighborhood.h  Neighborhoods.cpp  Neighborhoods.h
project/cs_ds_project/itsvnd/optimization/: BFGS_optimizer.h  LBS_BFGSoptimizer.h  LBaseOptimizer.h  LGradientDescentOptimizer.h
project/cs_ds_project/results/: log_TSVND_26.txt  log_TSVND_27.txt  log_TSVND_28.txt  log_TSVND_29.txt  log_TSVND_30.txt  log_TSVND_31.txt  log_TSVND_32.txt  log_TSVND_33.txt  log_TSVND_34.txt  log_TSVND_35.txt  log_TSVND_36.txt  log_TSVND_37.txt  log_TSVND_38.txt  log_TSVND_39.txt  log_TSVND_40.txt  log_TSVND_41.txt  log_TSVND_42.txt  log_TSVND_43.txt  log_TSVND_44.txt  log_TSVND_45.txt  log_TSVND_46.txt  log_TSVND_47.txt  log_TSVND_48.txt  log_TSVND_49.txt  log_TSVND_50.txt  log_TS_26.txt  log_TS_27.txt  log_TS_28.txt  log_TS_29.txt  log_TS_30.txt  log_TS_31.txt  log_TS_32.txt  log_TS_33.txt  log_TS_34.txt  log_TS_35.txt  log_TS_36.txt  log_TS_37.txt  log_TS_38.txt  log_TS_39.txt  log_TS_40.txt  (+35 more)
project/cs_ds_project/utils/: LConsoleMenu.h  LLogger.h
project/engine/: LGraphicsComp.h  LRenderer.h  LShaderManager.h
reports/: second_report.tex
